--- a/tools/extractor/Makefile
+++ b/tools/extractor/Makefile
@@ -14,7 +14,9 @@ TOOLNAME=axtor
 # List libraries that we'll need
 # We use LIBS because sample is a dynamic library.
 #
-LINK_COMPONENTS = all
+# LINK_COMPONENTS = all
+LINK_COMPONENTS = core object scalaropts support transformutils ipo instrumentation bitreader bitwriter asmparser
+# vectorize
 
 USEDLIBS=Axtor_OCL.a axtorInterface.a axtorPass.a axtorParsers.a axtorSolvers.a axtorAST.a axtorWriter.a \
 	axtorMetainfo.a axtorConsole.a axtorCNS.a axtorIntrinsics.a axtorUtil.a
