--- a/lib/Makefile
+++ b/lib/Makefile
@@ -9,6 +9,6 @@ LEVEL=..
 # List all of the subdirectories that we will compile.
 #
 
-PARALLEL_DIRS=axtor axtor_ocl
+PARALLEL_DIRS=axtor axtor_ocl axtor_glsl
 
 include $(LEVEL)/Makefile.common
